src/app/components/solrDetails/solrDetails.directive.scss
.solr-details {
  margin: 12px 0px 30px;

  .back-link {
    font-size: 12px;
    letter-spacing: 0.5px;
    color: $ocean-blue;
    cursor: pointer;
  }
  .details-heading {
    background-image: linear-gradient(to left, #29819c, #004666);
    color: $white;
    padding: 15px 21px;
    margin-top: 13px;
    margin-bottom: 20px;
    @include flex-and-align-center;
    justify-content: space-between;
    h1 {
      margin: 0 0 2px 0;
      letter-spacing: 0.5px;
    }
    .namespace {
      color: $seafoam;
      letter-spacing: 0.5px;
    }
  }
  .add-to-schema-button, .remove-from-schema-button {
    @include niem-button-filled($white, $ocean-blue, $silver);
  }
  .details-info {
    display: flex;
    flex-wrap: wrap;
    .details-info-content {
      margin: 0 15px;
      min-height: 114px;
      border: 1px solid;
      border-color: lighten($ocean-blue, 50%);
      padding: 20px;
      display: flex;
      flex: 0 1 50%;
      .symbol-div {
        display: flex;
        align-items: center;
        border-right: 1px solid;
        border-color: lighten($ocean-blue, 50%);
        padding-right: 15px;
      }
      .details-text {
        display: flex;
        flex-direction: column;
        justify-content: center;
        margin-left: 20px;
        h3 {
          letter-spacing: 0.5px;
          color: $marine-blue;
          margin: 0;
          padding-bottom: 8px;
        }
        p {
          margin: 0;
          letter-spacing: 0.5px;
          color: rgba(0, 0, 0, 0.58);
        }
      }
    }
  }

  .has-none {
    padding-left: 20px;
  }
  .niem-accordion-heading {
    padding: 18px 0;
    border-bottom: 1px solid $silver;
    .contain-title {
      letter-spacing: 0.5px;
      color: $marine-blue;
      display: inline-block;
      margin: 0;
    }
    .contain-type {
      color: $body-text-color;
      font-size: 14px;
    }
  }
  .niem-accordion-item {
    padding: 20px 0 20px 30px;
    letter-spacing: 0.5px;
    border-bottom: 1px solid $silver;
    .item-name {
      color: $ocean-blue;
    }
    .item-type {
      color: $body-text-color;
    }
  }
}

